# CS_523_Solar_System_Model

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: proposal.aux  proposal.out  proposal.tex
src/: main.rs
