[package]
name = "ProcGen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.17.2", features = ["dynamic_linking","jpeg"] }
bevy_generative = "0.4.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
